fix: Bottom Nav z-index

--- a/components/BottomNav/BottomNav.module.scss
+++ b/components/BottomNav/BottomNav.module.scss
@@ -11,6 +11,7 @@
   left: 0;
   bottom: 0;
   border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
+  z-index: 999;
   ul {
     list-style: none;
     margin: 0;
